<resources>
    <string name="app_name">starTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="star_tracker">Star tracker</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Sing up</string>
    <string name="forgot_password">forgot_password</string>
    <string name="by_einav_benito">by einav benito</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="choose_file">choose file</string>
</resources>